# uni

./: .gitignore
MPGI4/ha0/: aufgabe1.py  matrix_mult.py  rotations.py
MPGI4/ha1/: GaussianElimination.py  LRZerlegung.py  LRZerlegungOld.py  ellipse.py  tomograph.py
MPGI5/: aufgabe1.sql  aufgabe2.3.sql
StochInf/: ha4.tex  ha4.tex.backup  ha7.tex.backup  ha7_aufgabe4.tex  ha8_aufgabe2.tex  ha8_aufgabe2.tex.backup  ha8_aufgabe3.tex
TechGI4/: run.sh  run_serv.sh  tcpClient.c  tcpServer.c
TechGI4/B02.1/: run.sh  run_serv.sh  tcpClient  tcpClient.c  tcpServer  tcpServer.c  udpClient  udpClient.c
TechGI4/B02.2/: explain.txt  http.sh  httpClient.c  out_http.txt  tcpClient.c  tcpServer.c  timing.sh
TechGI4/B03.1/: hashClient.c  hashServer.c  run.sh  run_serv.sh  udpClient.c  udpServer.c
TechGI4/B03.2/: client.sh  hashClient.c  hashServer.c  http.sh  httpClient.c  rest.txt  server.sh
TheGI4/: pertson
cluster/aufgabe1/: Common.hs  Helper.hs  Simple.hs  aufgabe1.cabal  aufgabe1.pro  cabal.config  cabal.sandbox.config  graph.1  k15.txt  main.cpp  run_1.sh  t1.hs  t2.hs  t3.hs  test.sh  test068.graph
cluster/aufgabe1/results/: 10_22_2014 17:45:01.results  10_22_2014 17:45:30.results  10_22_2014 17:46:04.results  10_22_2014 19:57:11 - t1.results  10_22_2014 19:59:06 - t2.results  10_22_2014 20:01:49 - t1.results  10_22_2014 20:03:55 - t2.results  10_23_2014 12:57:52 - t2.results  10_23_2014 12:59:49 - t2.results  10_23_2014 13:00:50 - t3.results  10_24_2014 10:18:04 - t2.results  10_24_2014 10:19:05 - t3.results  10_24_2014 10:49:45 - t3.results
(+100 files in other folders)
