Name:           Aufgabe1
Version:        0.0
Cabal-Version:  >= 1.20
License:        BSD3
Author:         Paul Walger
Synopsis:       Small package with two programs
Build-Type:     Simple
Executable t1
  Main-Is:        t1.hs
  Build-Depends:  base, fgl, graphviz >= 2999.17, text, lens
Executable t2
  Main-Is:        t2.hs
  Build-Depends:  base, fgl, graphviz >= 2999.17, text, lens
  ghc-prof-options: -O2 -prof -auto-all